Add logs in ExcelParser